unpackaged/main/default/objects/n2de__Shift_planner_block__c/n2de__Shift_planner_block__c.object-meta.xml
<CustomObject>
    <description>Shift planner block describes one or more weeks of a single shift</description>
    <label>Shift planner block</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift planner blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>