unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__Distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The distribution hours object reference defines the given shift</description>
    <label>Distribution hours</label>
    <referenceTo>n2de__Distribution_hours__c</referenceTo>
    <relationshipLabel>Shift planner blocks</relationshipLabel>
    <relationshipName>Shift_planner_blocks</relationshipName>
    <type>Lookup</type>
</CustomField>