unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__End_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__End_date__c</fullName>
    <description>The date on which the shift ends. If this field is null, the shift continues indefinitely</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>