unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__Ready_for_deletion__c.field-meta.xml
<CustomField>
    <fullName>n2de__Ready_for_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag the current object for deletion</description>
    <label>Ready for deletion</label>
    <type>Checkbox</type>
</CustomField>