unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__Start_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Start_date__c</fullName>
    <description>The date on which the shift starts. This will be a Monday</description>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>