unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__Team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team member that the shift planner block relates to</description>
    <label>Team member</label>
    <referenceTo>n2de__Team_member__c</referenceTo>
    <relationshipLabel>Shift planner blocks</relationshipLabel>
    <relationshipName>Shift_planner_blocks</relationshipName>
    <type>Lookup</type>
</CustomField>