unpackaged/main/default/objects/n2de__Shift_planner_block__c/fields/n2de__Team_shift_planner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_shift_planner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team shift planner</label>
    <referenceTo>n2de__Team_shift_planner__c</referenceTo>
    <relationshipLabel>Shift planner blocks</relationshipLabel>
    <relationshipName>Shift_planner_blocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>